k3s/frontend-app-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: frontend-app

  labels:
    app.kubernetes.io/name: frontend-app
    app.kubernetes.io/part-of: cam-system

  namespace: cam-det

spec:
  selector:
    app: frontend-app

  ports:
    - port: 3000
      targetPort: 3000

  type: ClusterIP
